--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    caret-color: transparent;
     font-family: 'Nunito';
+    scroll-behavior: smooth;
 }
 :root{
     --main-color:#BF1E2E;
@@ -180,7 +180,7 @@ section.header-bg-parent {
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
-    width: 75%;
+    width: 100%;
 }
 
 
@@ -240,7 +240,7 @@ section.header-bg-parent:after {
     z-index: -1;
 }
 
-.hedaer-bg-par-img {
+.header-bg-par-img {
     position: absolute;
     bottom: -110px;
 }
@@ -264,7 +264,7 @@ section.header-bg-parent:after {
     box-shadow: 2px 2px 10px #fefefe;
     border-radius: 13px;
     transition: all 0.5s ease;
-    height: 265px;
+    /* height: 265px; */
 }
 
 .feature-col:hover {
@@ -773,7 +773,7 @@ section#blog {
 /*contact*/
 
 #contact {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/homecontact-bg.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/shutterstock_2037636728-min.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
